fix:correct spacing bug for why yoga section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 /*----------colours----------*/
@@ -56,24 +56,79 @@ body {
 
 
 /*----------why yoga section----------*/
-.container-yoga {
-    height: 100vh;
+
+#club-ethos{
+    height: 600px;
+}
+
+#left-about{
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+}
+
+hr {
+    border-top: 1px solid #777777;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.left-about-heading {
+    width: 50%;
+    float: right;
     line-height: 20px;
     clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 50%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: left;
+}
+
+#welcome {
     margin: 20px 0;
-    padding-top: 50px;
+    text-align: center;
+    font-size: 280%;
 }
 
-.yoga-circle {
-    padding-top: 40px;
-    display: grid;
-    place-items: center;
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+    border-style: solid;
+    border-color: #cccccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
 }
 
-.yoga-circle img {
-    max-width: 100%;
-    height: auto;
+#circle-cover-bg {
+    background: url('../images/middle.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
+
+
+
 
 /*----------gallery----------*/
 
